home page changes - de-templating

--- a/css/main.less
+++ b/css/main.less
@@ -22,7 +22,7 @@
 
 //Modules
 @import "less/modules/browserBg";
-@import "less/modules/work";
-@import "less/modules/skills";
+//@import "less/modules/work";
+@import "less/modules/hero";
 @import "less/modules/buttons";
 @import "less/modules/forms";
