--- a/css/less/core/typography.less
+++ b/css/less/core/typography.less
@@ -90,6 +90,9 @@
 
 	hr { clear: both; margin: 10px 0 30px; height: 0; border: solid #ddd; border-width: 1px 0 0; }
 	
+	.c-white {
+		color: white;
+	}
 	
 
 	
