--- a/css/less/core/variables.less
+++ b/css/less/core/variables.less
@@ -1,6 +1,5 @@
 
 /*
-    SPARC Web
     LESS Variables
 */
 
@@ -35,7 +34,7 @@
 
 // Typography
 // -------------------------
-@font-family-sans-serif:  	"varela", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  	"Raleway", Helvetica, Arial, sans-serif;
 @font-family-serif:       	"klinic slab", Georgia, "Times New Roman", Times, serif;
 @font-family-alt:       	"futura", "Times New Roman", Times, serif;
 @font-size-base:          	1.6rem;
@@ -47,8 +46,8 @@
 @line-height-base:        	1.5;
 @font-family-base:        	@font-family-sans-serif;
 
-@headings-font-family:  	@font-family-serif;
-@headings-font-weight:    	400;
+@headings-font-family:  	@font-family-sans-serif;
+@headings-font-weight:    	600;
 
 // Layout
 // -------------------------
