--- a/css/less/core/typography.less
+++ b/css/less/core/typography.less
@@ -22,14 +22,15 @@
 	h2 { 
 		margin-bottom: 2.2rem;
 		font-size: 2.6rem; 
-		line-height: 2.8rem;
+		line-height: 1.1em;
 		
 		}
 		 
 		 
 	h3 {
+		font-size: 2.0rem; 
 		margin-bottom: 1.5rem;
-		line-height: 21px;
+		line-height: 1.1em;
 	 }
 	 
 
@@ -37,11 +38,8 @@
 
 	h4 { 
 		margin-bottom: 4px; 
-		font-size: 1.4rem; 
-		font-weight: 600;
-		line-height: 30px; 
-		font-family: @font-family-base;
-		text-transform: uppercase;
+		font-size: 1.6rem; 
+		line-height: 1.1em; 
 	}
 
 	h5 { font-size: 17px; line-height: 24px; }
@@ -62,10 +60,11 @@
 			font-size: 26px;
 		}
 
-	p{
-		font-size: 1.5rem;
-		margin: 0 0 2rem;
-		line-height: 1.8;
+	p, ul {
+	margin: 0;
+	+ p {
+	margin-top: 20px;
+	}
 	}
 
 	li {
@@ -94,6 +93,22 @@
 		color: white;
 	}
 	
-
-	
+	.c-maroon {
+		color: @maroon;
+	}
+		.c-grey {
+		color: @grey;
+	}
+	.c-pink-lt {
+		color: @pink-lt;
+	}
+	.c-green {
+		color: green;
+	}
+		.c-green-lt {
+		color: @green-lt;
+	}
+.c-cream {
+	color: @cream;
+}
 
