--- a/css/less/core/utils.less
+++ b/css/less/core/utils.less
@@ -225,3 +225,42 @@
 .img-circle {
    border: 5px solid #fff;
 }
+
+
+.font-t-u {
+  text-transform: uppercase;
+}
+.font-d-u {
+  text-decoration: underline;
+}
+
+.font-t-i {
+  font-style: italic;
+  letter-spacing: .075em;
+}
+
+.font-b {
+  font-weight: bold;
+}
+
+.font-0 {
+  margin: 0;
+  line-height: 1;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+.typeset{
+  max-width:27em;
+}
+.typeset--xs{
+  max-width:18em;
+}
+.typeset--lg{
+  max-width:34em;
+}
+.typeset--xlg{
+  max-width:52em;
+}
