--- a/css/less/layout/content.less
+++ b/css/less/layout/content.less
@@ -107,7 +107,7 @@ section {
 			height: @social-size;
 			line-height: @social-size;
 			text-align: center;
-			background: @brand-success;
+			background: @pink-lt;
 			border-radius: 50%;
 			.transition(all .3s ease-out);
 		}
