--- a/css/less/layout/footer.less
+++ b/css/less/layout/footer.less
@@ -5,10 +5,10 @@ footer {
     margin-top: 3rem;
     padding: 20px 0;
     clear: both;
-    background: #786672 url("../images/bg_top.png"); 
+    background: lighten(@pink-lt, 25%); 
     p {
         text-align: center;
-        color: @brand-xltPrimary;   
+        color: @brand-primary;   
         margin-bottom: 0;
     }
 
