--- a/css/less/layout/nav.less
+++ b/css/less/layout/nav.less
@@ -51,9 +51,9 @@
 			}
 		}
 		.navbar-toggle {
-			border: 1px solid @brand-ltGray;
+			border: 1px solid @grey;
 			.icon-bar{
-				background: @brand-ltGray;
+				background: @grey;
 			}
 		}
 
