--- a/css/less/modules/forms.less
+++ b/css/less/modules/forms.less
@@ -3,6 +3,9 @@
 */
 .form-control {
     .form-control-focus();
+    border-radius: 0;
+    border: none;
+    background: lighten(@maroon, 30%)
 }
 
 form label.error {
