Added styling for headers and text

--- a/css/less/core/variables.less
+++ b/css/less/core/variables.less
@@ -12,10 +12,11 @@
 @gray-light:             lighten(#000, 60%);   // #999
 @gray-lighter:           lighten(#000, 93.5%); // #eee
 
-@grey:			#7e7568;
-@pink-lt:			#BA9294; //alt text
-@maroon:			#520E1D; //teal
-@green-lt:		#BBD970; //mauve
+@grey-darker:   #3F3B34;
+@grey:			    #7e7568;
+@pink-lt:			  #BA9294; //alt text
+@maroon:			  #520E1D; //teal
+@green-lt:		  #BBD970; //mauve
 @green: 	#A19F5A;
 @cream: 	#FCE9CF;
 @brand-success:			@green; //green
