--- a/css/less/core/typography.less
+++ b/css/less/core/typography.less
@@ -16,6 +16,8 @@
 		font-size:  3.6rem;
 		line-height: 3.4rem;
 		text-transform: uppercase;
+		font-weight: 600;
+		color: @grey-darker;
 		}
 	
 		
@@ -23,7 +25,7 @@
 		margin-bottom: 2.2rem;
 		font-size: 2.6rem; 
 		line-height: 1.1em;
-		
+		color: @grey-darker;
 		}
 		 
 		 
@@ -31,19 +33,41 @@
 		font-size: 2.0rem; 
 		margin-bottom: 1.5rem;
 		line-height: 1.1em;
+		color: @maroon;
+		font-weight: 600;
 	 }
-	 
-
 
 
 	h4 { 
 		margin-bottom: 4px; 
 		font-size: 1.6rem; 
-		line-height: 1.1em; 
+		line-height: 1.1em;
+		color: @maroon; 
 	}
 
-	h5 { font-size: 17px; line-height: 24px; }
-	h6 { font-size: 14px; line-height: 21px; }
+	
+	h5 { 
+		font-size: 17px; 
+		line-height: 24px; 
+		color: @grey;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		font-stretch: extra-condensed;
+		font-weight: 600;
+	}
+	
+
+	h6 { 
+		font-size: 14px; 
+		line-height: 21px; 
+		color: @grey;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		font-stretch: extra-condensed;
+		font-weight: 600;
+	}
+
+
 	.subheader { color: #777; }
 	
 	
