--- a/css/less/modules/buttons.less
+++ b/css/less/modules/buttons.less
@@ -20,6 +20,14 @@
   }
 }
 
+.btn-hero{
+  background: transparent;
+  border: #fff 1px solid;
+   &:hover{
+    background-color: @btn-primary-bg;
+  }
+}
+
 .btn {
 	font-size: 1.2rem;
 	//text-transform: uppercase;
