--- a/css/less/modules/hero.less
+++ b/css/less/modules/hero.less
@@ -1,3 +1,11 @@
 .hero__logo {
     margin: 0 auto;
 }
+
+.hero__bg {
+	background-image: url(../images/hero-bg.png);
+}
+
+.jumbotron {
+	background: transparent;
+}
