--- a/css/less/layout/content.less
+++ b/css/less/layout/content.less
@@ -30,7 +30,21 @@ section {
 	}
 }
 
+	/* Index page
+================================================== */
+.how-to-icon {
+	max-width: 100px;
+}
 
+#how-it-works {
+
+
+}
+	/* Recent Projects
+================================================== */
+#recent-projects {
+	background-color: #a39d96;
+	padding: 40px 0;}
 		
 	/* Section Title
 ================================================== */		
