--- a/css/less/modules/forms.less
+++ b/css/less/modules/forms.less
@@ -5,7 +5,8 @@
     .form-control-focus();
     border-radius: 0;
     border: none;
-    background: lighten(@maroon, 30%)
+    background-color: #f2f0f1;
+    box-shadow: none;
 }
 
 form label.error {
