--- a/css/less/core/utils.less
+++ b/css/less/core/utils.less
@@ -174,6 +174,96 @@
   margin-top: 0;
 }
 
+.mt-5 {
+  margin-top: 5px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
+.mt-15 {
+  margin-top: 15px;
+}
+.mt-20 {
+  margin-top: 20px;
+}
+.mt-30 {
+  margin-top: 30px;
+}
+.mt-40 {
+  margin-top: 30px;
+}
+.mt-50 {
+  margin-top: 30px;
+}
+
+.mb-5 {
+  margin-bottom: 5px;
+}
+.mb-10 {
+  margin-bottom: 10px;
+}
+.mb-15 {
+  margin-bottom: 15px;
+}
+.mb-20 {
+  margin-bottom: 20px;
+}
+.mb-30 {
+  margin-bottom: 30px;
+}
+.mb-40 {
+  margin-bottom: 40px;
+}
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.pt-5 {
+  margin-top: 5px;
+}
+.pt-10 {
+  margin-top: 10px;
+}
+.pt-15 {
+  margin-top: 15px;
+}
+.pt-20 {
+  margin-top: 20px;
+}
+.pt-30 {
+  margin-top: 30px;
+}
+.pt-40 {
+  margin-top: 30px;
+}
+.pt-50 {
+  margin-top: 30px;
+}
+
+.pb-5 {
+  margin-bottom: 5px;
+}
+.pb-10 {
+  margin-bottom: 10px;
+}
+.pb-15 {
+  margin-bottom: 15px;
+}
+.pb-20 {
+  margin-bottom: 20px;
+}
+.pb-30 {
+  margin-bottom: 30px;
+}
+.pb-40 {
+  margin-bottom: 30px;
+}
+.pb-50 {
+  margin-bottom: 30px;
+}
+
+
+
 // PADDING
 .px-0 {
   padding: 0;
@@ -248,6 +338,41 @@
   line-height: 1;
 }
 
+.font-s-i {
+  font-style: italic;
+}
+
+.font-d-u {
+  text-decoration: underline;
+}
+.font-w-1 {
+  font-weight: 100;
+}
+.font-w-2 {
+  font-weight: 200;
+}
+.font-w-3 {
+  font-weight: 300;
+}
+.font-w-4 {
+  font-weight: 400;
+}
+.font-w-5 {
+  font-weight: 500;
+}
+.font-w-6 {
+  font-weight: 600;
+}
+.font-w-7 {
+  font-weight: 700;
+}
+.font-w-8 {
+  font-weight: 800;
+}
+.font-w-9 {
+  font-weight: 900;
+}
+
 .text-justify {
   text-align: justify;
 }
@@ -263,4 +388,26 @@
 }
 .typeset--xlg{
   max-width:52em;
+}
+
+.float-n {
+  float: none;
+}
+
+//SECTIONS
+.section-margin{
+  margin-top:40px;
+  margin-bottom:40px;
+}
+.section-padding{
+  padding-top:40px;
+  padding-bottom:40px;
+}
+
+.section-padding-top{
+  padding-top:40px;
+}
+
+.section-padding-bottom{
+  padding-bottom:40px;
 }
