--- a/css/less/core/variables.less
+++ b/css/less/core/variables.less
@@ -48,6 +48,9 @@
 @headings-font-family:  	@font-family-sans-serif;
 @headings-font-weight:    	400;
 
+
+@input-border-radius: 0;
+
 // Layout
 // -------------------------
 @section-pad:				4rem;
