--- a/css/less/layout/content.less
+++ b/css/less/layout/content.less
@@ -38,13 +38,21 @@ section {
 
 #how-it-works {
 
+}
 
+.how-it-works-inner {
+	padding: 0 40px;
 }
 	/* Recent Projects
 ================================================== */
 #recent-projects {
-	background-color: #a39d96;
+	background-color: rgba(163,157,150, .4);
 	padding: 40px 0;}
+
+	.recent-projects-img {
+		max-width: 1070px;
+		margin-top: 30px
+	}
 		
 	/* Section Title
 ================================================== */		
