--- a/css/less/layout/footer.less
+++ b/css/less/layout/footer.less
@@ -2,10 +2,10 @@
 ================================================== */
 
 footer {
-    margin-top: 3rem;
+    //margin-top: 3rem;
     padding: 20px 0;
     clear: both;
-    background: lighten(@pink-lt, 25%); 
+    //background: lighten(@pink-lt, 25%); 
     p {
         text-align: center;
         color: @brand-primary;   
