Added styling for header

--- a/css/less/core/utils.less
+++ b/css/less/core/utils.less
@@ -411,3 +411,8 @@
 .section-padding-bottom{
   padding-bottom:40px;
 }
+
+.flower-background {
+  background-size: 100%;
+  background-image: url("../assets/bg-image-header.png");
+}
