planner form styling

--- a/css/less/core/variables.less
+++ b/css/less/core/variables.less
@@ -49,7 +49,17 @@
 @headings-font-weight:    	400;
 
 
-@input-border-radius: 0;
+
+@input-color:                    @grey;
+//** `<input>` border color
+@input-border:                   transparent;
+//** `<input>` border radius
+@input-border-radius:            0px;
+//** Border color for inputs on focus
+@input-border-focus:             @grey;
+
+//** Placeholder text color
+@input-color-placeholder:        lighten(@grey, .7);
 
 // Layout
 // -------------------------
