--- a/css/less/modules/forms.less
+++ b/css/less/modules/forms.less
@@ -3,12 +3,23 @@
 */
 .form-control {
     .form-control-focus();
-    border-radius: 0;
+    border-radius: 0px;
     border: none;
     background-color: #f2f0f1;
     box-shadow: none;
+    height: 50px;
+}
+.input-group-addon {
+    background-color: #f2f0f1;
+    border: none;
 }
 
+label {
+    display: inline-block;
+    margin-bottom: 5px;
+    font-weight: 600;
+    font-size: 14px;
+}
 form label.error {
     margin-top:-1em;
     font-size:13px;
