--- a/css/less/modules/buttons.less
+++ b/css/less/modules/buttons.less
@@ -1,7 +1,10 @@
 .btn {
   font-size: 1.2rem;
-  //text-transform: uppercase;
-  letter-spacing: 1px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  border-radius: 0px;
+  font-weight: 600;
+  padding: 10px 30px;
 }
 .btn-default {
 	//border-color: transparent;
