Added styling to maker project detail page

--- a/css/less/core/utils.less
+++ b/css/less/core/utils.less
@@ -416,3 +416,11 @@
   background-size: 100%;
   background-image: url("../assets/bg-image-header.png");
 }
+
+.horizontal-image-gallery {
+  height: 220px;
+}
+
+.cream-bg {
+  background-color: rgba(163,157,150,0.4);
+}
