planner form styling

--- a/css/less/modules/forms.less
+++ b/css/less/modules/forms.less
@@ -8,6 +8,9 @@
     background-color: #f2f0f1;
     box-shadow: none;
     height: 50px;
+    &.filter {
+        height: 25px;
+    }
 }
 .input-group-addon {
     background-color: #f2f0f1;
