--- a/css/less/layout/content.less
+++ b/css/less/layout/content.less
@@ -30,6 +30,18 @@ section {
 	}
 }
 
+hr {
+	margin: 30px 0;
+}
+
+.v-divider {
+	padding: 0 10px;
+}
+
+.bids {
+	margin-left: 20px;
+	color: @grey;
+}
 
 	/* Index page
 ================================================== */
@@ -40,9 +52,17 @@ section {
 #how-it-works {
 
 }
+.see-details {
+	font-size: 14px;
+}
 
 .how-it-works-inner {
 	padding: 0 40px;
+}
+
+.panel-title {
+	font-size: 20px;
+	color: @grey;
 }
 	/* Recent Projects
 ================================================== */
@@ -53,6 +73,12 @@ section {
 	.recent-projects-img {
 		max-width: 1070px;
 		margin-top: 30px
+	}
+
+	#open-projects__list {
+		.media {
+			margin-bottom: 30px;
+		}
 	}
 		
 	/* Section Title
