--- a/css/less/layout/content.less
+++ b/css/less/layout/content.less
@@ -80,6 +80,18 @@ hr {
 			margin-bottom: 30px;
 		}
 	}
+
+	.arrow {
+		position: absolute;
+    width: 120px;
+    top: 120px;
+	}
+	.arrow1 {
+    left: 310px;
+	}
+	.arrow2 {
+    left: 710px;
+	}
 		
 	/* Section Title
 ================================================== */		
